a1/brendan_gordon/TEST_PROGRAMS/invalidtype/luke_emery-fertitta/float_to_int.min
# invalid assignment of float to int

var x : int;
var y : float;
x = y; # should fail due to type error, not lack of initialization
